# RFSN-MERGED-BENCHMARK

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_RULES.md  CHANGELOG.md  Dockerfile  KERNEL_ONLY_BUILD  Makefile  README.md  README_COMBINED.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run_episode.py  verify_audit.py
.github/: BRANCH_PROTECTION.md
.rfsn_state/: failure_index.jsonl
agent/: __init__.py  deepseek_agent.py  ensemble_patcher.py  gate.py  gate_adapter.py  llm_patcher.py  loop.py  orchestrator.py  outcome_learning.py  profiles.py  propose_v2.py  types.py
cgw_ssl_guard/: __init__.py  cgw_state.py  event_bus.py  monitors.py  runtime.py  thalamic_gate.py  types.py
configs/: swebench_max.yaml
datasets/: README.md  sample_issue.json
docs/: ARTIFACTS_AND_SIGNING.md  CGW_CODING_AGENT.md  CONFIGURATION.md  DOCKER_SANDBOX.md  E2B_USE_CASES.md  FEATURE_MODE.md  PRODUCTION_GUIDE.md  USAGE_GUIDE.md  VALIDATION_REPORT.md
eval/: __main__.py  cli.py  dataset_loader.py  repo_setup.py  run_legacy.py  run_v2.py  strictness.py  swebench.py  test_cmd.py  test_embeddings.py  types.py
examples/: basic_evaluation.py  self_critique_demo.py
gate_ext/: __init__.py  gate.py  policy_diff.py  policy_files.py  policy_phase.py  policy_tests.py  semantic_diff.py
learning/: __init__.py  bandit.py  epsgreedy_persist.py  outcomes.py  planner_bandit.py  state_store.py  swebench_learner.py  thompson.py  thompson_persist.py
llm/: README.md  __init__.py  client.py  patch_generator.py  prompts.py  requirements.txt
localize/: __init__.py  embeddings.py  ripgrep.py  symbol_index.py  trace.py  types.py
memory/: __init__.py  episode_db.py  llm_cache.py  log.py  store.py  unified.py
orchestrator/: __init__.py  episode_runner.py  loop.py  loop_v2.py  repo_fingerprint.py  worktree_eval.py
patch/: apply.py  gen.py  minimize.py  score.py  types.py
planner/: __init__.py  plan_graph.py  planner.py  spec.py  validate.py  variants.py
repair/: __init__.py  classifier.py  taxonomy.py
replay/: __init__.py  replay_check.py
retrieval/: __init__.py  advanced_embeddings.py  ast_localization.py  embeddings.py  failure_index.py  recall.py  repair_cards.py
rfsn_controller/: __init__.py  action_outcome_memory.py  action_store.py  allowlist_profiles.py  apt_whitelist.py  async_db.py  async_multi_tier_cache.py  audit_chain.py  batch_file_ops.py  benchmark.py  broadcaster.py  budget.py  buildpack_registry.py  cgw_bridge.py  cgw_cli.py  ci_entrypoint.py  cli.py  cli_rich.py  clock.py  command_allowlist.py  command_normalizer.py  config.py  connection_pool.py  context.py  contracts.py  controller.py  controller_helpers.py  controller_loop.py  db_pool.py  determinism.py  diff_minimizer.py  docker_pool.py  docker_reaper.py  early_stop_optimizer.py  engram.py  events.py  evidence_manager.py  evidence_pack.py  exec_utils.py  executor_spine.py  (+65 more)
rfsn_dashboard/: __init__.py  app.py
rfsn_upstream/: __init__.py  bandit.py  critic.py  fingerprint.py  llm_prompting.py  prompt_variants.py  retrieval.py  reward.py  swebench_extract_tasks.py  swebench_repo_cache.py  swebench_runner.py  worktree_manager.py
runner/: __init__.py  artifacts.py  tests.py
scripts/: download_hf.py  fetch_swebench.py  rfsn_audit_append.py  rfsn_pr_summary.py  rfsn_publish_artifacts.py  rfsn_verify_audit_chain.py  rfsn_verify_signature.py  run_learning_loop.py  verify_datasets.py
search/: __init__.py  beam.py  patch_search.py
skills/: __init__.py  heads.py  router.py
swebench_max/: candidate.py  candidate_generator.py  dedup.py  diff_stats.py  evaluator.py  filters.py  import_graph.py  kernel_proposal.py  orchestrator.py  prompts.py  retrieval_memory.py  run.py  static_risk.py  targeted_tests.py  targeted_tests_v2.py  traceback_parser.py  worktree_pool.py
tests/: conftest.py  test_async_multi_tier_cache.py  test_async_pool.py  test_beam_search.py  test_benchmarks.py  test_budget_gates.py  test_buildpack_registry.py  test_connection_pool.py  test_contracts.py  test_controller_syntax.py  test_controller_upgrades.py  test_coverage_analyzer.py  test_db_pool.py  test_docker_reaper.py  test_events.py  test_evidence_manager.py  test_executor_spine.py  test_fail_closed.py  test_failure_classifier.py  test_feature_mode.py  test_full_audit.py  test_git_rollback.py  (+31 more)
(+133 files in other folders)
